# airbnb

./: .gitignore  CONTEXT.md  README.md  calendar.sh  checkouts.sh  cleanings.sh  credentials.local.env.example  fetch.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: fetch.yml  notify-bookings.yml  publish-calendar.yml  publish-cleaning-calendar.yml  seed-chrome-profile.yml
airbnb_calendar/: __init__.py  airbnb_actions.py  airbnb_urls.py  bookings_extract.py  bookings_format.py  chrome_profile.py  env_loader.py
calendars/: __init__.py  booking_helpers.py  calendar_model.py  html_export.py  main.py
calendars/tests/: test_booking_helpers.py  test_calendar_model.py  test_html_export.py  test_main.py  test_portugal_holidays.py
checkouts/: __init__.py  checkouts_format.py  main.py
checkouts/tests/: test_checkouts_format.py
cleanings/: booking_helpers.py  calendar_model.py  cleanings-map.xlsx  html_export.py  main.py  portugal_holidays.py
cleanings/templates/: cleanings-map.xlsx
cleanings/tests/: test_booking_helpers.py  (+3 more)
docs/: bookings-snapshot.json  index.html  manifest.webmanifest  seed-chrome-profile.md  sw.js
fetch/: __init__.py  airbnb_actions.py  bookings_extract.py  chrome_profile.py  env_loader.py  main.py  run_fetch.py
notifications/: __init__.py  format.py  main.py  push.py  snapshot.py  vapid_keys.py
scripts/: prepare-pwa-icons.py  reseed-chrome-profile.sh  seed-chrome-profile-local.sh  seed-chrome-profile.md
shared/: __init__.py  listing_labels.py  paths.py  pwa.py
tests/: test_bookings_format.py
(+6 files in other folders)
